# BlocRoc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: api-spec.md  architecture.md  contributing.md  explainer.md
roc-chain/node/: Cargo.toml
roc-chain/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
roc-chain/pallets/event/: Cargo.toml
roc-chain/pallets/event/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
roc-chain/pallets/marketplace/: Cargo.toml
roc-chain/pallets/marketplace/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
roc-chain/pallets/scanner/: Cargo.toml
roc-chain/pallets/scanner/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
roc-chain/pallets/ticket/: Cargo.toml
roc-chain/pallets/ticket/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
roc-chain/runtime/: Cargo.toml
roc-chain/runtime/src/: lib.rs
roc-frontend/: next.config.js  package.json
roc-frontend/src/app/: layout.tsx  page.tsx
roc-frontend/src/app/dashboard/: page.tsx
roc-frontend/src/app/marketplace/: page.tsx
roc-frontend/src/lib/: api.ts
roc-indexer/: docker-compose.yml  package.json  project.yaml  schema.graphql
roc-indexer/src/: index.ts
roc-indexer/src/mappings/: event.ts  marketplace.ts  scanner.ts  ticket.ts
roc-scanner/: app.json  package.json
roc-scanner/app/: index.tsx
roc-scanner/src/: scanner.ts
scripts/: demo.sh  run-tests.sh  setup.sh  start-network.sh  stop-network.sh
