[workspace]
resolver = "2"

members = [
    "roc-chain/node",
    "roc-chain/runtime",
    "roc-chain/pallets/ticket",
    "roc-chain/pallets/event",
    "roc-chain/pallets/marketplace",
    "roc-chain/pallets/scanner",
]

[workspace.package]
version = "0.1.0"
authors = ["BlocRoc Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/blocroc/blocroc"

# All Substrate / Polkadot-SDK crates are sourced from the polkadot-stable2409
# git tag. This avoids the crates.io version-number mismatch between sc-* crates
# and frame-*/sp-* crates (they have independent version histories).

[workspace.dependencies]
# ── FRAME ────────────────────────────────────────────────────────────────────
frame-benchmarking        = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-executive           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-support             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-system              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-try-runtime         = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }

# ── Pallets ───────────────────────────────────────────────────────────────────
pallet-aura               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-balances           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-grandpa            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-sudo               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-timestamp          = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }

# ── Substrate Primitives (sp-*) ───────────────────────────────────────────────
sp-api                = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-block-builder      = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-consensus-aura     = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-consensus-grandpa  = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-core               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-genesis-builder    = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-inherents          = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-io                 = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-offchain           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-runtime            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-session            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-std                = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-storage            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-timestamp          = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-transaction-pool   = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-version            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }

# ── Substrate Client (sc-*, node-side, always std) ────────────────────────────
sc-cli                    = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-client-api             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus-aura         = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus-grandpa      = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-executor               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-network                = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-offchain               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-rpc-api                = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-service                = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-telemetry              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-transaction-pool       = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-transaction-pool-api   = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
substrate-frame-rpc-system   = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
substrate-wasm-builder       = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }

# ── General ───────────────────────────────────────────────────────────────────
codec      = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
clap       = { version = "4.5", features = ["derive"] }
jsonrpsee  = { version = "0.24", features = ["server"] }
futures    = { version = "0.3" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

# Speed up compilation for dev builds
[profile.dev.package."*"]
opt-level = 3
