[package]
name = "roc-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "BlocRoc blockchain node"
build = "build.rs"

[[bin]]
name = "roc-node"
path = "src/main.rs"

[dependencies]
clap.workspace = true
futures.workspace = true
serde_json.workspace = true

sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-aura.workspace = true
sc-consensus-grandpa.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-offchain.workspace = true
sc-rpc-api.workspace = true
sc-service.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
substrate-frame-rpc-system.workspace = true

sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-grandpa.workspace = true
sp-core.workspace = true
sp-inherents.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-timestamp.workspace = true

jsonrpsee.workspace = true

roc-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils.workspace = true
