[package]
name = "roc-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "BlocRoc WASM runtime"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

frame-executive.workspace = true
frame-support.workspace = true
frame-system.workspace = true
frame-system-rpc-runtime-api.workspace = true
frame-try-runtime = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

pallet-aura.workspace = true
pallet-balances.workspace = true
pallet-grandpa.workspace = true
pallet-sudo.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true

sp-api.workspace = true
sp-block-builder.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-grandpa.workspace = true
sp-core.workspace = true
sp-genesis-config.workspace = true
sp-inherents.workspace = true
sp-offchain.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-std.workspace = true
sp-storage = { workspace = true, optional = true }
sp-transaction-pool.workspace = true
sp-version.workspace = true

# BlocRoc pallets
pallet-ticket = { path = "../pallets/ticket", default-features = false }
pallet-event = { path = "../pallets/event", default-features = false }
pallet-marketplace = { path = "../pallets/marketplace", default-features = false }
pallet-scanner = { path = "../pallets/scanner", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "24.0.0", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde",
    "serde_json/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "frame-try-runtime?/std",
    "frame-benchmarking?/std",
    "frame-system-benchmarking?/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-genesis-config/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-storage?/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "pallet-ticket/std",
    "pallet-event/std",
    "pallet-marketplace/std",
    "pallet-scanner/std",
    "substrate-wasm-builder",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-transaction-payment/runtime-benchmarks",
    "pallet-ticket/runtime-benchmarks",
    "pallet-event/runtime-benchmarks",
    "pallet-marketplace/runtime-benchmarks",
    "pallet-scanner/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-ticket/try-runtime",
    "pallet-event/try-runtime",
    "pallet-marketplace/try-runtime",
    "pallet-scanner/try-runtime",
    "sp-runtime/try-runtime",
]
